--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-tset
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" " http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+
+<html xmlns=" http://www.w3.org/1999/xhtml">
+
+<head>
+
+
+<meta http-equiv="refresh"content="0;url= http://39.103.148.158:8080/blog/index">
+
+</head>
+
+<body>
+
+</body>
+
+</html>
