--- a/index.html
+++ b/index.html
@@ -520,7 +520,13 @@
 									</span></span>
 								</li>
 								<li>
-									<span style="color: red;">永久Github发布页</span>
+									<span style="color: blue;">北风资源网地址发布页</span>
+									<a href="https://top.bfzywz.com"
+										target="_blank"><i>https://top.bfzywz.com/</i></a>
+									</span></span>
+								</li>
+								<li>
+									<span style="color: red;">永久Github地址发布页</span>
 									<a href="https://qiyebaby.github.io/"
 										target="_blank"><i>https://qiyebaby.github.io/</i></a>
 									</span></span>
@@ -549,21 +555,11 @@
 							<span style="font-size: 16px;
 				text-align: center;
 				color: #fff;
-				">© 2019-2020 BeiFeng. All Rights Reserved</span>
+				">© 2019-2022 BeiFeng. All Rights Reserved</span>
 
 						</a></p>
 				</div>
 				<ul class="bg-bubbles">
-					<li></li>
-					<li></li>
-					<li></li>
-						<li></li>
-					<li></li>
-					<li></li>
-					<li></li>
-					<li></li>
-					<li></li>
-					<li></li>
 					<li></li>
 					<li></li>
 					<li></li>
